--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   --alt-color: #4b4b51;
   --ann-color: #c7c6d3;
 
-  --h1-font: 4.5rem;
+  --h1-font: 3.5rem;
   --h2-font: 2.3rem;
   --p-font: 1.1rem;
 }
@@ -37,11 +37,14 @@ header{
   justify-content: space-between;
   transition: all .6s ease;
 }
-.logo img{
+.logo{
   max-width: 80px;
   width: 100%;
   height: 100%;
   object-fit: contain;
+  color: var(--text-color);
+  font-size: 30px;
+  font-weight: 600;
 }
 .menulist a{
   display: inline-block;
@@ -64,14 +67,14 @@ header{
 .menu-btn{
   display: inline-block;
   padding: 15px 25px;
-  background: linear-gradient(135deg, #e1bac5 0%, var(--main-color) 100%);
-  color: var(--bg-color);
+  background: linear-gradient(135deg, #141414 0%, var(--alt-color) 100%);
+  color: var(--text-color);
   font-size: 20px;
   font-weight: 500;
   border-radius: 13px;
 }
 .menu-btn:hover{
-  background: linear-gradient(135deg, var(--main-color) 0%, #e1bac5 100%);
+  background: linear-gradient(135deg, var(--alt-color) 0%, #141414 100%);
 }
 #menu-icon{
   z-index: 10001;
@@ -86,15 +89,22 @@ section{
 .home{
   height: 100vh;
   width: 100%;
-  background: url(img/bg.png);
+  background: var(--bg-color);
   background-size: cover;
   background-position: center;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  gap: 5rem;
 }
 .home-text{
   padding-top: 30px;
+}
+.home-img img{
+  height: 450px;
+  width: 350px;
+  object-fit: cover;
 }
 .h-line{
   display: inline-block;
@@ -165,8 +175,8 @@ h-btn{
 .btn2{
   display: inline-block;
   padding: 18px 35px;
-  background: linear-gradient(135deg, #e1bac5 0%, var(--main-color) 100%);
-  color: var(--bg-color);
+  background: linear-gradient(135deg, #141414 0%, var(--alt-color) 100%);
+  color: var(--text-color);
   font-size: 18px;
   font-weight: 500;
   border-radius: 17px;
@@ -194,15 +204,15 @@ header.sticky{
   max-width: 550px;
   border-radius: 20%;
   object-fit: cover;
-  background: -webkit-linear-gradient(135deg, var(--main-color) 0%, #e1bac5 100%);
-  border: 5px solid var(--main-color);
+  background: -webkit-linear-gradient(135deg, var(--alt-color) 0%, #141414 100%);
+  border: 5px solid var(--alt-color);
 }
 .about-text h2{
   margin: 22px 0;
   font-size: var(--h2-font);
 }
 .about-text h2 span{
-  background: -webkit-linear-gradient(135deg, #e1bac5 0%, var(--main-color) 100%);
+  background: -webkit-linear-gradient(135deg, #141414 0%, var(--alt-color) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -221,10 +231,7 @@ header.sticky{
 }
 
 .services{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-  gap: 1rem;
+  width: 100%;
 }
 .services-left h2{
   margin: 22px 0;
@@ -358,7 +365,7 @@ header.sticky{
   justify-content: center;
   height: 50px;
   width: 50px;
-  background: linear-gradient(135deg, #e1bac5 0%, var(--main-color) 100%);
+  background: linear-gradient(135deg, #141414 0%, var(--alt-color) 100%);
   color: var(--bg-color);
   border-radius: 1.7rem;
   font-size: 22px;
@@ -434,7 +441,7 @@ form textarea::placeholder{
 form .submit-btn{
   display: inline-block;
   padding: 18px 25px;
-  background: linear-gradient(135deg, #e1bac5 0%, var(--main-color) 100%);
+  background: linear-gradient(135deg, #141414 0%, var(--alt-color) 100%);
   color: var(--bg-color);
   font-size: 17px;
   font-weight: 500;
@@ -467,7 +474,7 @@ form .submit-btn:hover{
   justify-content: center;
   height: 50px;
   width: 50px;
-  background: linear-gradient(135deg, #e1bac5 0%, var(--main-color) 100%);
+  background: linear-gradient(135deg, #141414 0%, var(--alt-color) 100%);
   color: var(--bg-color);
   border-radius: 1.7rem;
   font-size: 22px;
@@ -624,5 +631,12 @@ form .submit-btn:hover{
     padding: 13px 27px;
     width: 40%;
     font-size: 13px;
+  }
+  .home{
+    margin-bottom: 150%;
+  }
+  .logo{
+    font-size: 20px;
+    font-weight: 600;
   }
 }
