--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ section{
   display: inline-block;
   padding: 10px 14px;
   background: transparent;
-  border: 1px solid var(--alt-color);
+  border: 1px dashed var(--alt-color);
   font-size: var(--p-font);
   font-weight: 500;
   color: var(--ann-color);
@@ -153,7 +153,7 @@ section{
   transform: scale(1.06) rotate3d(0, 0, 1, 360deg);
   color: var(--text-color);
 }
-h-btn{
+.h-btn{
   display: flex;
   align-items: center;
 }
@@ -442,7 +442,7 @@ form .submit-btn{
   display: inline-block;
   padding: 18px 25px;
   background: linear-gradient(135deg, #141414 0%, var(--alt-color) 100%);
-  color: var(--bg-color);
+  color: var(--text-color);
   font-size: 17px;
   font-weight: 500;
   border-radius: 17px;
@@ -633,10 +633,34 @@ form .submit-btn:hover{
     font-size: 13px;
   }
   .home{
-    margin-bottom: 150%;
+    margin-bottom: 30%;
   }
   .logo{
     font-size: 20px;
     font-weight: 600;
+  }
+  body{
+    margin: 0 8%;
+  }
+  .email h6{
+    font-size: 16px;
+  }
+  .btn1, .btn2{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+  }
+  .h-btn{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+  .home-img{
+    display: none;
+  }
+  .home-text h1{
+    font-size: 25px;
   }
 }
